CHORE: Added a hard delete for the book
