# build/docker/swagger/docs/swagger.json
@@ -245,17 +245,14 @@
                 }
             },
             "delete": {
-                "description": "Archive a book by marking it as deleted",
+                "description": "delete a book by ID (Hard delete)",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Archive a book by ID",
+                "summary": "delete a book by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -268,7 +265,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully archived book",
+                        "description": "Successfully deleted book",
                         "schema": {
                             "type": "string"
                         }
